# ctri

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  devenv.nix  index.html  rel.sh  run.sh
.github/workflows/: static.yml
shaders/: frag.glsl  frag_es3.glsl  vert.glsl  vert_es3.glsl
src/: common.c  common.h  index.c  index.h  main.c  shaders.h  world.c  world.h
web/: index.html
